# robocup-cxx

./: .gitignore  CConfig.cpp  CConfig.h  CCupulaFijo.cpp  CCupulaFijo.h  CCupulaMovil.cpp  CCupulaMovil.h  CEncoder.cpp  CEncoder.h  CEncoderReal.cpp  CEncoderReal.h  CEncoderSimulado.cpp  CEncoderSimulado.h  CMakeLists.txt  README.md  SerialPort.cpp  SerialPort.h  SerialPort2.cpp  SerialPort3.cpp  boost  boost-1.75.0.tar.xz  global.h  log4cxx  main.cpp  main.h  pigpio  pigpio-master.tar.xz  prueba.cpp  prueba.h  test_movil.cpp  test_movil.h
.devcontainer/: Dockerfile  devcontainer.json
config/: robocupcxx.xml
includeDebug/: modo.h
includeRelease/: modo.h
log4cxx.0.11.0/: NotasInstalacion.txt
log4cxx.0.11.0/lib/: liblog4cxx.so.11.0.0
log4cxx.0.11.0/share/cmake/log4cxx/: log4cxxConfig-noconfig.cmake  log4cxxConfig.cmake  log4cxxConfigVersion.cmake
log4cxx.0.11.0/share/pkgconfig/: liblog4cxx.pc
pigpio-78/lib/: core  libpigpiod_if2.so.1
pruebasc++/: CMakeLists.txt  CPruebaPython.cpp  CPruebaPython.h  CPruebaPython.i  CPruebaPython.py  CWSCliente.cpp  CWSCliente.h  prueba.cpp  prueba.py  websocket_client_sync.cpp
